Standup models added (#375)
* #374: Standup models added
