# app/serializers.py
@@ -605,10 +605,23 @@ class OwnerOnBoardingSerializer(serializers.ModelSerializer):
             permission=models.Role.Permission.OWNER,
             is_default=True,
         ).first()
-        emp_data = validated_data.pop("employee", {})
-        user = super().create(validated_data)
-        if emp_data:
-            emp_ser = OwnerEmployeeSerializer(data=emp_data)
-            emp_ser.is_valid(raise_exception=True)
-            emp_ser.save(user=user, organization=organization, user_allowed=True)
-        return user
+
+        return super().create(validated_data)
+
+
+class TeamSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = models.Team
+        fields = "__all__"
+
+
+class StandupSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = models.Standup
+        fields = "__all__"
+
+
+class StandupUpdateSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = models.StandupUpdate
+        fields = "__all__"
